Bug 1178272 - Move table semantics to a separate mozTableAccessible.mm file. r=surkov